band color changed to white

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,7 +6,7 @@ $navbar-default-bg: black;
 #logo {
 	float : left;
 	font_size : 1.7em;
-	color: #5b0829;
+	color: #fff;
 	text-transform: uppercase;
 	latter-spacing: -1px;
 	font-weight: bold;
