Add user data to articles listing page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -114,3 +114,9 @@ margin-top: 0;
 	padding-bottom: 5px;
 }
 
+.article-meta-details {
+	
+	border-top : 1px solid #eaeaea;
+	margin-top : 15px;
+	
+}
