--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,48 +1,5 @@
- 
-
 
 <h1 align="center">Signup For Million Thoughts!</h1>
 
- <%= render 'shared/errors', obj: @user %>
-<div class="form-horizontal"
-  <div class='row'>
-   <div class='col-xs-12'>
-<%= form_with(model: @user, local: true) do |form| %>
-
-<div class="form-group">
-<div class="control-label col-sm-2">
-    <%= form.label :username %>
-
-    </div>
-    <div class="col-sm-8">
-    <%= form.text_field :username,id: "title", class: "form-control", placeholder: "please type your username", autofocus: true%>
-    </div>
-  </div> 
-  
-
-  <div class="form-group">
-<div class="control-label col-sm-2">
-    <%= form.label :email %>
-    </div>
-    <div class="col-sm-8">
-    <%= form.email_field :email,class: "form-control", placeholder: "please type your email", autofocus: true %>
-  </div>
-  </div>
-
-  <div class="form-group">
-<div class="control-label col-sm-2">
-    <%= form.label :password %>
-    </div>
-    <div class="col-sm-8">
-    <%= form.password_field :password,class: "form-control", placeholder: "please type your password", autofocus: true %>
-  </div>
-  </div>
-
-  <div class="form-group">
-<div class="col-sm-offset-2 col-sm-10">
-    <%= form.submit "Sign Up", class: 'btn btn-primary btn-lg' %>
-  </div>
-  </div>
-  </div>
-  </div>
-<% end %>
+ 
+<%= render 'form' %>
