--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 <h1 align="center"> All Members </h1>
-
+<div align="center">
+<%= will_paginate @articles %>
+</div>
 <div align="center">
 <% @users.each do |user| %>
 <ul class="listing">
@@ -14,4 +16,7 @@
     </div>
     </ul>
 <%end%>
+<div align="center">
+<%= will_paginate @articles %>
+</div>
 </div>
